--- a/sources/css/reset.css
+++ b/sources/css/reset.css
@@ -12,9 +12,10 @@ a {
 
 * {
     margin: 0;
-
+    padding: 0;
+    box-sizing: border-box;
 }
 
-li {
-    list-style: none;
-}
+li,ol, ul {
+	list-style: none;
+} 
