--- a/sources/css/style.css
+++ b/sources/css/style.css
@@ -1,91 +1,119 @@
-body {
-    height: 100vh;
-    display: grid;
-    grid-template-rows: 1fr 1fr;
-    background: url(../images/cieletoile.svg);
-    background-color: #282327;
-
+*{
+    color: white;
 }
 
+body {
+    background: url(../images/cieletoile.svg);
+    background-color: #282327;
+    width:100vw;
+}
+
+/*--------------------------- header ----------------------------*/
 
 header {
-    grid-row: 1;
-    grid-column: 1;
+    width: 100%;
+    height: 150px;
     display: flex;
-    height: 85px;
-    margin: 40px 0 0 300px;
+    justify-content: space-between;
+    align-items: center;
+    padding: 1rem 3rem;
+}
+
+.navigation ul{
+    display: flex;
+    text-decoration: none;
+}
+
+.navigation ul li{
+    margin: 0 10px;
 }
 
 .logo {
+    height: 100%;
     animation-name: logo;
     animation-duration: 4s;
 }
 
-.menu {
-    display: flex;
-}
+/*------------------------------- hero -----------------------------*/
 
-.toto {
-    display: flex;
-    justify-content: space-around;
-}
-
-.navigation2 a {
-    font-family: "nintend";
-    display: block;
+#hero{
+    height: calc(100vh - 150px);
+    width: 100%;
+    text-align: center;
 }
 
 
 
-.titre {
-    font-size: 1.5em;
-    font-family: "nintend";
-    grid-row: 1;
-    grid-column: 1;
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-    flex-direction: column;
+h1{
+    font-size: 3.6rem;
     color: #E60012;
     animation-name: titre;
     animation-duration: 4s;
+    margin-top: 12%;
+    margin-bottom: 3.6rem;
 }
 
-h1,
-h2 {
-    margin: 20px;
+.navigation-hero{
+    font-size: 1.5rem;
+}
+
+/*------------------------------- about -----------------------------*/
+
+#about{
+    margin-top: 1rem;
+    padding: 0 3rem;
+    border: 1px solid red;
 }
 
 
+/*------------------------------ project ----------------------------*/
 
-.navigation {
-    padding: 20px;
-    grid-row: 2;
-    grid-column: 1;
+#project{
+    margin-top: 3rem;
+    text-align: center;
+}
+
+#project article{
     display: flex;
-    justify-content: center;
-    padding-top: 30px;
-    font-size: 1.5em;
-    animation-name: navigation;
-    animation-duration: 7s;
+    justify-content: space-between;
+    width: 100%;
+    padding: 3rem;
+}
+
+.projet{
+    width: 20%;
+    height: 20%;
+    display: grid;
+    grid: 1fr / 1fr;
+    border: 1px solid red;
+}
+
+/*------------------------------- skill -----------------------------*/
+
+#skill{
+    margin-top: 3rem;
+    display: flex;
+    width: 100%;
+    justify-content: space-around;
+    align-items: center;
+}
+
+#skill article{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+    width: 70%;
+}
+
+.skill{
+    width: 25%;
+
 }
 
 
 
-nav a {
-    font-family: "nintend";
-    color: white;
-}
-
-li {
-    margin: 20px;
-}
-
-p {
-    font-family: dosis;
-    font-size: 0.8em;
-    color: #DFCB95;
-}
+/*------------------------------- footer ----------------------------*/
 
 footer {
     height: 30px;
