--- a/sources/css/style.css
+++ b/sources/css/style.css
@@ -63,6 +63,18 @@ h1{
     margin-top: 1rem;
     padding: 0 3rem;
     border: 1px solid red;
+    width: 100vw;
+}
+
+#about>article{
+    display: flex;
+    width: 100%;
+    border: 1px solid green;
+}
+
+#about img {
+    width: 100%;
+    height: auto;
 }
 
 
