--- a/sources/css/style.css
+++ b/sources/css/style.css
@@ -62,8 +62,11 @@ h1{
 #about{
     margin-top: 1rem;
     padding: 0 3rem;
-    border: 1px solid red;
     width: 100vw;
+}
+
+#about h2{
+    margin-bottom: 3rem;
 }
 
 #about>article{
@@ -72,14 +75,25 @@ h1{
     align-items: center;
     overflow: hidden;
     width: 100%;
-    border: 1px solid green;
     height: 20vw;
 }
 
 #about img {
     object-fit:cover;
     width:20vw;
-    border: solid 1px #CCC;
+}
+
+#about>article>article{
+    padding: 1rem;
+    text-align: right;
+    width: 60vw;
+}
+
+#about>article>article h3{
+    margin: 1rem;
+    color: red;
+    font-weight: bold;
+    font-size: 1.2rem;
 }
 
 
@@ -98,35 +112,86 @@ h1{
 }
 
 .projet{
-    width: 20%;
-    height: 20%;
+    width: 20vw;
+    height: 20vw;
     display: grid;
     grid: 1fr / 1fr;
     border: 1px solid red;
+    align-items: center;
+}
+
+.projet a{
+    height: 100%;
+    width: 100%;
+    overflow: hidden;
+    grid-row: 1;
+    grid-column: 1;
+    background-color: rgba(1,1,1,0.8);
+    display: grid;
+    grid: 1fr / 1fr;
+}
+
+.projet a img{
+    object-fit:cover;
+    height: 100%;
+    width: 100%;
+    background-color: rgba(1,1,1,0.8);
+    grid-row: 1;
+    grid-column: 1;
+}
+
+.projet h3{
+    grid-row: 1;
+    grid-column: 1;
+}
+
+#background{
+    background-color: rgba(1,1,1,0.5); 
+    width: 100%;
+    height: 100%;
+    grid-row: 1;
+    grid-column: 1;
+    
+}
+
+#background:hover{
+    background-color: rgba(1,1,1,0);
 }
 
 /*------------------------------- skill -----------------------------*/
 
-#skill{
+#skills{
     margin-top: 3rem;
     display: flex;
     width: 100%;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
+    padding: 3rem;
 }
 
-#skill article{
+#skills article{
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
     width: 70%;
 }
 
-.skill{
-    width: 25%;
 
+.skill {
+    width: 25%;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 6rem;
 }
+.fab, .fas {
+    font-size: 100px;
+}
+
+
 
 
 
@@ -150,7 +215,7 @@ footer {
 
 
 
-/*animation*/
+/*------------------------------animation---------------------------*/
 
 @keyframes logo {
     from {
