--- a/sources/css/style.css
+++ b/sources/css/style.css
@@ -100,7 +100,7 @@ h1{
 /*------------------------------ project ----------------------------*/
 
 #project{
-    margin-top: 3rem;
+    margin-top: 15rem;
     text-align: center;
 }
 
@@ -116,7 +116,7 @@ h1{
     height: 20vw;
     display: grid;
     grid: 1fr / 1fr;
-    border: 1px solid red;
+    border: 3px solid red;
     align-items: center;
 }
 
@@ -161,7 +161,7 @@ h1{
 /*------------------------------- skill -----------------------------*/
 
 #skills{
-    margin-top: 3rem;
+    margin-top: 15rem;
     display: flex;
     width: 100%;
     justify-content: space-between;
@@ -189,10 +189,43 @@ h1{
 }
 .fab, .fas {
     font-size: 100px;
+    margin-bottom: 2rem;
 }
 
 
+/*------------------------------- contact ---------------------------*/
 
+
+#contact{
+    display: flex;
+    padding: 3rem;
+    justify-content: center;
+    align-items: center;
+    width: 100vw;
+    margin-top: 10rem;
+    
+}
+
+#contact>img{
+    width: 30%;
+    height: auto;
+    margin-right: 12rem;
+    border: 3px solid white;
+}
+
+#contact address{
+    display: flex;
+    flex-direction: column;
+}
+
+#contact address h3{
+    margin-bottom: 3rem;
+    color: red;
+}
+
+#contact address a{
+    margin-bottom: 1.5rem;
+}
 
 
 /*------------------------------- footer ----------------------------*/
@@ -206,6 +239,7 @@ footer {
     justify-content: flex-end;
     align-content: flex-end;
     align-self: flex-end;
+    margin-top: 10rem;
 }
 
 .mentionslegales {
@@ -251,5 +285,93 @@ footer {
 
     to {
         opacity: 1;
+    }
+}
+
+@media (max-width: 900px){
+
+    h1{
+        font-size: 2rem;
+    }
+
+    .titre{
+        padding: 3rem;
+    }
+
+    #about {
+        padding: 0 1rem;
+        margin-top: 5rem;
+    }
+
+    #about>article{
+        flex-direction: column;
+        height: max-content;
+    }
+
+    #about>article>article{
+        text-align: left;
+        width: 100vw;
+    }
+
+    #about img{
+        width: 70vw;
+        max-width: 500px;
+        height: auto;
+    }
+
+    #project article{
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        padding: 0;
+    }
+
+    .projet{
+        width: 70vw;
+        max-width: 500px;
+        height: 70vw;
+        max-height: 500px;
+        margin: 3rem 0;
+    }
+
+
+    #skills{
+        flex-direction: column;
+        padding: 0;
+        justify-content: center;
+        align-items: center;
+    }
+
+    #skills article{
+        width: 100vw;
+    }
+
+
+    .skill{
+        margin: 3rem 1rem;
+        width: 25vw;
+    }
+
+    .fab .fas{
+        font-size: 100%;
+    }
+
+    #contact{
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        margin: 0;
+        padding: 0;
+    }
+
+    #contact img, #contact address{
+        width: 80vw;
+        margin: 0;
+        text-align: center;
+        margin-top: 30px;
+    }
+
+    footer {
+        margin-top: 2rem;
     }
 }
